--- a/build.gradle
+++ b/build.gradle
@@ -38,8 +38,14 @@ buildscript {
 }
 
 dependencies {
+
     testCompile 'junit:junit:4.11'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'org.apache.httpcomponents:httpclient:4.5.2'
+    compile 'com.sun.jersey:jersey-client:1.19.1'
+    compile 'org.apache.commons:commons-io:1.3.2'
+
+
     def tomcatVersion = '7.0.11'
 
     providedCompile "org.apache.tomcat:tomcat-servlet-api:${tomcatVersion}"
